drupal-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    project: test
    scope: drupal
