drupal-app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-mysql
  labels:
    app: drupal        
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: backend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - compute-2
      containers:
      - image: mysql:5
        args:
        - "--ignore-db-dir=lost+found"
        imagePullPolicy: IfNotPresent
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-stateful-storage
          mountPath: /var/lib/mysql
      volumes:
        - name: mysql-stateful-storage
          persistentVolumeClaim:
            claimName: drupal-pvc-mysql
# drupal
---
apiVersion: v1
kind: Service
metadata:
  name: drupal 
  labels:
    app: drupal
spec:
  ports:
    - port: 80
      name: web
      targetPort: 80
  selector:
    app: drupal
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 #
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
    tier: frontend
spec:
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - compute-1
      containers:
      - image: ipirva/drupal:7.0
        imagePullPolicy: Always
        name: drupal
        ports:
        - containerPort: 80
          name: drupal
      volumes:
        - name: drupal-pvc
          persistentVolumeClaim:
            claimName: drupal-pvc-drupal
