drupal-app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: drupal-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: "nsx"
    ncp/http-redirect: "true"
    ncp/ssl-mode: "offload"
    ncp/use-regex: "true"
spec:
  tls:
    - hosts:
        - mysite.com
      secretName: drupal-tls
  rules:
    - host: mysite.com
      http:
        paths:
          - path: /
            backend:
              serviceName: drupal
              servicePort: 80
